<?xml version="1.0"?>
<package format="2">
  <name>vga_3d_camera</name>
  <version>1.0.0</version>
  <description>This package provides ros node for Terabee VGA 3D Camera</description>

  <maintainer email="jorge.camarero@terabee.com">Jorge Camarero Vera</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
